Minor changes
